# Lenna-Mobile-Robot-ONE

./: README.md
lenna_ws/: .rosinstall.bak  actual_path.csv  actual_path_full.csv  actual_path_full_short.csv  saved_path.csv  saved_path_full.csv  saved_path_full_short.csv
lenna_ws/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
lenna_ws/src/IPS_BLE_Dataset/: CMakeLists.txt  package.xml
lenna_ws/src/ldlidar_stl_ros/: .gitignore  CMakeLists.txt  README.md  package.xml  ws_deploy.sh
lenna_ws/src/lenna_bringup/: CMakeLists.txt
lenna_ws/src/lenna_description/: CMakeLists.txt
lenna_ws/src/lenna_msgs/: CMakeLists.txt  package.xml
lenna_ws/src/lenna_teleop/: CMakeLists.txt  package.xml
lenna_ws/src/scripts/: lenna_mobile_robot.py  odom_publisher.py  readtest.py
lmr_protocol/python/lmr_protocol_sdk/: field_ops.py  lenna_mobile_robot.py  packet_handler.py  read_test.py  serial_handler.py  test.py  write_test.py
mcu/: .mxproject  Lenna-Bardia-MCU-Board.ioc
mcu/Core/Inc/: hmc5883l.h  imu.h  (+8 more)
mcu/Debug/: Lenna-Bardia-MCU-Board.elf  Lenna-Bardia-MCU-Board.hex  Lenna-Bardia-MCU-Board.list  Lenna-Bardia-MCU-Board.map  makefile  objects.list
software/embedded/: README.md
software/ros/: README.md
software/ros/lenna_astar/: CMakeLists.txt  package.xml
software/ros/lenna_astar/launch/: lenna_astar.launch  lenna_online_astar.launch
software/ros/lenna_astar/scripts/: a_star.cpp  astar_node.cpp  online_astar_node.cpp
software/ros/lenna_astar/src/: online_astar_node.cpp
(+301 files in other folders)
